# github-plugin

./: .gitignore  AGENTS.md  CLAUDE.md  PROTO.md  README.md  __init__.py  api.py  gh_cli.py  gh_issue.py  protoagent.plugin.yaml  pyproject.toml  read_tools.py  requirements-dev.txt  view.py  write_tools.py
.beads/: config.yaml
.github/workflows/: ci.yml
tests/: conftest.py  test_board_view.py  test_gh_issue.py  test_issue_command.py  test_read_tools.py  test_register.py  test_version.py  test_write_tools.py
