[project]
name = "github-plugin"
version = "0.1.1"
description = "Read/write GitHub tools for protoAgent over the gh CLI, with per-agent write gating."
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]   # long comment/docstring lines are idiomatic here

[tool.pytest.ini_options]
asyncio_mode = "auto"
